public/stylesheets/style.css
/* ... */
#leftdiv {
    width: 100px;
    float: left;
}

#accordion {
    height: 94%; /* Change it dynamically according to the layout*/
    overflow:hidden;

    position: fixed;
    width: 105px;
    background-color: #464D57;
}

#toolsdiv {
    height: 100%;
    overflow: hidden;
}

#canvasId {
    float: none;
    overflow: auto;
    background-color: #FFF;
    position: relative;
}

#leftdiv p {
    padding-left: 2px;
    padding-right: 2px
}

#right {
    display: none;
    width: 0px;
    height: 0px;
}

#version {
    color: #AAAAAA;
    float: right;
    font-family: arial;
    font-size: 13px;
    margin: 5px 30px 0 0;
}

#user {
    color: #AAAAAA;
    float: right;
    font-family: arial;
    font-size: 13px;
    margin: 5px 30px 0 0;
}

#menuicons {
    margin: 55px 20px 0px 0px;
}

#menuicons img {
    margin: 0 5px 0 5px;
    cursor: pointer;
}

#logo {
    position: absolute;
    left: 10px;
}

#leftdiv img {
    cursor: pointer;
}

.tools {
    margin: -12px 0 5px -30px;
    cursor: pointer;
    width: 100px;
    height: 100px;
    background: url('../images/tools_sprite.png') no-repeat;
}

#logo-wrapper {
    float: left;
    margin: 15px 0 0 30px;
}

#logo-tag-wrapper {
    font-family: arial;
    font-size: 14px;
    float: right;
    text-decoration: none;
}

#logo-tag-wrapper:hover {
    color: #026CD0;
}

#icons-wrapper {
    float: right;
}

.ui-accordion-content {
    background-color: #D3DAE5;
}

.shape-active {
    background-color: #9BA2AD;
    color: #FFF;
    box-shadow: -1px -1px 2px 1px #666666 inset;
    -webkit-box-shadow: -1px -1px 2px 1px #666666 inset;
    -moz-box-shadow: -1px -1px 2px 1px #666666 insets;
}

#shape {
    text-align: center;
}

#shape img {
    display: inline-block;
}

#shape-label {
    text-align: center !important;
    clear: both !important;
    position: relative;
    top: -10px;
}

.ui-accordion-content {
    margin: 0px !important;
    padding: 0px !important;

}

div.scroller {
    cursor: pointer;
}

.scroller-up {
    height: 14px;
    background: #AAAAAA url('../images/up_arrow.png') no-repeat center center;
}

.scroller-down {
    height: 14px;
    background: #8F98A6 url('../images/down_arrow.png') no-repeat center center;
}

.shapesHolder {
/*    overflow: auto;*/
}

.scrollerContentHolder {
    position: relative;
}

#popUpDiv {
    position: absolute;
    background-color: #eeeeee;
    width: 300px;
    height: 300px;
    z-index: 9002;
}

#helpDiv {
    position: absolute;
    background-color: #eeeeee;
    width: 800px;
    height: 600px;
    z-index: 9003;

}

#helpInnerDiv {
    padding: 15px !important;
}

#helpInnerDiv h1 {
    background: #474747;
    color: white;
    padding: 10px;
}

#blanket {
    background-color: #111;
    opacity: 0.65;
    filter: alpha(opacity = 65);
    position: absolute;
    z-index: 9001;
    top: 0px;
    left: 0px;
    width: 100%;
}
#loading {
    width: 26em;
    height: 11em;
    padding: 1em 1em 2em;
    text-align: center;
    margin-left: -14.5em;
    margin-top: -7em;
    left: 50%;
    position: absolute;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    background: #464D57;
    top: 0px;
}

#loading h4 {
  color: white;
  font-size: 3em;
  margin: 0.5em 0;
  font-weight: normal;
  line-height: 1.3em;
  font-style: normal;
}

img.spinner {
  width: 42px;
}

#closediv  a {
    text-decoration: none;
    font-family: arial;
    font-size: 14px;
    color: white;
}

input.file {
    position: relative;
    top: 20px;
    width: 100px;
    height: 16px;
    text-align: right;
    visibility: hidden;
    z-index: 2;
}

.rightFloater {
    float: right;
}

#introContainer {
    width: 300px;
    height: 300px;
    position: absolute;
    left: 50%;
    top: 50%;
    margin-left: -150px;
    margin-top: -150px;
}

.loginIcon {
    width: 32px;
    border: 0px;
    margin: 0 10px 0 0;
}


.profilePic {
    width: 50px;
    height: 50px;
}


#delete_menuItem {
    position: absolute;
    width: 60px;
    height: 20px;
    font-size: 16px;
    color: black;
    border: 1px solid black;
    background: #eee url('../images/delete_object.png') no-repeat;
    padding-left: 10px;
    z-Index: 1050;
    text-align: center;
    cursor: default;
    -webkit-box-shadow: 0 8px 6px -6px black;
    -moz-box-shadow: 0 8px 6px -6px black;
    box-shadow: 0 8px 6px -6px black;
}

#loginLogo {
    padding: 30px 0px 20px 40px;
}

.rightHeader {
    background-color: #464d57;
}

#testimonial {
    padding: 20px 20px 20px 20px;
    color: #1886DB;
    font-family: Arial, Helvetica, sans-serif;
    font-style: Italic;
    font-size: 14px;
}
#testimonial p {
    color: #1886DB;
    font-style:italic;
    margin: 0 0 0 40px;
}
#rightQuote {
    clear:both;
}

.leftHeader {
    background-color: #ffffff;
}
#loginHeader {
    background: #fff;
}
#loginContent {
    background: #fff;
}
#loginFooter {
    background: #fff;
 }
#loginHeaderDivider {
    background: url('../images/headerdivider_left.png') repeat-x;
}
#loginHeaderDividerLeft {
    height: 20px;
    background: url('../images/headerdivider_left.png') repeat-x;
}

#loginHeaderDividerRight {
    height: 20px;
    background: url('../images/headerdivider_right.png') repeat-x;
}

.content {
    height: auto;
}

#loginLeftContent {

}
#userInfo {


}
#userInfo .profileDetails {
    min-height: 50px;
    color: #8a9ab1;
    text-align:center;
}
#userInfo .profileLink {
    color: #1886DB;
}
#userInfo .profilePic {
    margin-left: 20px;
}
#userInfo h6 {
   font-size: 9px;
}
#userInfo .loginSource {
    font-size: 11px;
}
#logoutLink  {
    color: #8A9AB1;
    padding-left:4px;
}

#loginLeftContent h3 {
    font-size: 13px;
    font-family: Arial, Helvetica, sans-serif;
    margin: inherit;
    color: #8a9ab1;
    padding-bottom: 5px;
}

.loginIconBar {
    display: inline;
    margin: inherit;
}

.leftContentDivider {
    border-top: 1px dotted #8a9ab1;
    border-bottom: 0;
    margin: 30px 0px 5px 40px;
}
/* ... */

